--- a/highschool/templates/high_school_search.html
+++ b/highschool/templates/high_school_search.html
@@ -47,7 +47,7 @@
     </form>
 
     <div class="search-results">
-        {% if corporations %}
+        {% if high_schools %}
             <h2>Search Results:</h2>
             <table>
                 <tr>
