高校さんと企業さんを行き来できるように

--- a/corporation/templates/corporation_search.html
+++ b/corporation/templates/corporation_search.html
@@ -65,5 +65,6 @@
             <p class="no-results">No results found.</p>
         {% endif %}
     </div>
+    <a href="high_school">高校さんへ</a>
 </body>
 </html>
