--- a/highschool/templates/high_school_search.html
+++ b/highschool/templates/high_school_search.html
@@ -65,5 +65,6 @@
             <p class="no-results">No results found.</p>
         {% endif %}
     </div>
+    <a href="../">企業さんへ</a>
 </body>
 </html>
