--- a/corporation/templates/corporation_search.html
+++ b/corporation/templates/corporation_search.html
@@ -14,14 +14,21 @@
     <svg xmlns="http://www.w3.org/2000/svg" class="d-none"></svg>
   <symbol id="bootstrap" viewBox="0 0 118 94">
     <style>
+        body {
+            background: #333333;
+            color: white;
+            font-family: Arial, sans-serif;
+            min-height: 100vh; /* ページの最低高さをビューポートの高さに設定 */
+        }
 
         .search-form {
             margin: 20px;
         }
         .search-input {
-            width: 300px;
+            width: 200px;
             padding: 10px;
             font-size: 16px;
+            border-radius: 10px;
         }
         .search-button {
             padding: 10px 20px;
@@ -55,10 +62,10 @@
 <!-- 折り畳み可能リストのサイドバー -->
 <div class="sidebar">
   <div class="flex-shrink-0 p-3" style="width: 280px;">
-    <a class="d-flex pb-3 mb-3 text-decoration-none border-bottom">
+    <p class="d-flex pb-3 mb-3 border-bottom">
       <svg class="bi me-2" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
-        <span class="fs-5 fw-semibold">業界サーチ</span>
-    </a>
+        <span class="fs-5 fw-semibold"><strong>業界サーチ</strong></span>
+    </p>
     <ul class="list-unstyled ps-0">
       <li class="mb-1">
         <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0" data-bs-toggle="collapse" data-bs-target="#trade-collapse" aria-expanded="true">
@@ -157,21 +164,24 @@
     </ul>
   </div>
 </div>
-
+<!--ここまでサイドバー-->
+<!--ここからメイン-->
 <div class="main-content">
     <h1>Corporation Search</h1>
     <form class="search-form" method="get">
         <input class="search-input" type="text" name="query" value="{{ query }}" placeholder="企業名or就職偏差値">
-        <button class="search-button" type="submit">Search</button>
+        <button class="search-button btn btn-primary" type="submit">Search</button>
     </form>
-
+<div style="text-align: right; margin-right: 20px">
+<a href="high_school">高校さんへ</a>
+</div>
     <div class="search-results">
         {% if corporations %}
             <h2>Search Results:</h2>
             <table>
                 <tr>
-                    <th>企業名(職種)</th>
-                    <th>就職偏差値</th>
+                    <th><font color="#333333">企業名(職種)</font></th>
+                    <th><font color="#333333">就職偏差値</font></th>
                 </tr>
                 {% for corporation in corporations %}
                     <tr>
@@ -184,7 +194,6 @@
             <p class="no-results">No results found.</p>
         {% endif %}
     </div>
-    <a href="high_school">高校さんへ</a>
 </div>
 </body>
 </main>
