--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -16,7 +16,7 @@
 .btn-toggle::before {
   width: 1.25em;
   line-height: 0;
-  content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
+  content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23ffffff' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
   transition: transform .35s ease;
   transform-origin: .5em 50%;
 }
@@ -47,10 +47,38 @@
 }
 
 .sidebar {
-
+  background-color: #242124;
+  overflow-y: scroll;
+  height: 100vh; /* ビューポートの高さにサイドバーを合わせる */
+  position: fixed; /* 固定位置に配置 */
+  top: 0; /* 上端に配置 */
+  left: 0; /* 左端に配置 */
 }
 
 .main-content {
   text-align: center;
   flex: 1;
+  margin-left: 280px; /* サイドバーの幅を考慮した余白 */
+  margin-bottom: 100px;
 }
+
+/* Webkit系ブラウザ（Chrome, Safari） */
+::-webkit-scrollbar {
+    width: 12px; /* スクロールバーの幅 */
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: white; /* スクロールバーのスライダー部分の色 */
+    border-radius: 6px; /* 角丸 */
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: gray; /* ホバー時の色 */
+}
+
+::-webkit-scrollbar-track {
+    background-color: gray; /* スクロールバーのトラック部分の色 */
+}
+
+/* Firefox */
+/* ファイアフォックスでは現在直接のカスタマイズはサポートされていません */
