サイドバー下部固定、著作権表示

--- a/corporation/templates/corporation_search.html
+++ b/corporation/templates/corporation_search.html
@@ -147,20 +147,6 @@
           </ul>
         </div>
       </li>
-      <li class="border-top my-3"></li>
-      <li class="mb-1">
-        <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0" data-bs-toggle="collapse" data-bs-target="#account-collapse" aria-expanded="false">
-          アカウント
-        </button>
-        <div class="collapse" id="account-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-            <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">新プロジェクト...</a></li>
-            <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">プロフィール</a></li>
-            <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">設定</a></li>
-            <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">サインアウト</a></li>
-          </ul>
-        </div>
-      </li>
     </ul>
   </div>
 </div>
@@ -195,6 +181,24 @@
         {% endif %}
     </div>
 </div>
+
+<!-- サイドバー下部 -->
+<!-- アカウントメニュー -->
+<div class="account-menu">
+  <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0" data-bs-toggle="collapse" data-bs-target="#account-collapse" aria-expanded="false">
+          アカウント
+        </button>
+        <div class="collapse" id="account-collapse">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">新プロジェクト...</a></li>
+    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">プロフィール</a></li>
+    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">設定</a></li>
+    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">サインアウト</a></li>
+  </ul>
+</div>
+    <div>© 2023 就職偏差値 格付けの会</div>
+</div>
+
 </body>
 </main>
 
