--- a/highschool/templates/high_school_search.html
+++ b/highschool/templates/high_school_search.html
@@ -40,7 +40,7 @@
     </style>
 </head>
 <body>
-    <h1>HighScool Search</h1>
+    <h1>HighSchool Search</h1>
     <form class="search-form" method="get">
         <input class="search-input" type="text" name="query" value="{{ query }}" placeholder="高校名or高校偏差値">
         <button class="search-button" type="submit">Search</button>
