--- a/corporation/templates/corporation_search.html
+++ b/corporation/templates/corporation_search.html
@@ -1,168 +1,11 @@
-{% load static %}
+{% include 'corporation_base.html' %}
 
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
-    <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-  <!-- CSSの設定ファイル -->
-    <link rel="stylesheet" href="{% static 'css/sidebar.css' %}">
-
-    <title>Corporation Search</title>
-    <!-- アイコンの設定 -->
-    <svg xmlns="http://www.w3.org/2000/svg" class="d-none"></svg>
-  <symbol id="bootstrap" viewBox="0 0 118 94">
-    <style>
-        body {
-            background: #333333;
-            color: white;
-            font-family: Arial, sans-serif;
-            min-height: 100vh; /* ページの最低高さをビューポートの高さに設定 */
-        }
-
-        .search-form {
-            margin: 20px;
-        }
-        .search-input {
-            width: 200px;
-            padding: 10px;
-            font-size: 16px;
-            border-radius: 10px;
-        }
-        .search-button {
-            padding: 10px 20px;
-            font-size: 16px;
-        }
-        .search-results {
-            margin-top: 20px;
-            margin-left: 50px;
-        }
-        .no-results {
-            color: red;
-        }
-        table {
-            width: 80%;
-            border-collapse: collapse;
-            margin: 0 auto;
-        }
-        th, td {
-            padding: 8px;
-            border: 1px solid #ddd;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-    </style>
+<title>就職偏差値サーチ</title>
 </head>
 <body>
-<main class="d-flex">
-  <h1 class="visually-hidden">サイドバーの実例</h1>
-
-<!-- 折り畳み可能リストのサイドバー -->
-<div class="sidebar">
-  <div class="flex-shrink-0 p-3" style="width: 280px; margin-bottom: 100px">
-    <p class="d-flex pb-3 mb-3 border-bottom">
-      <svg class="bi me-2" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
-        <span class="fs-5 fw-semibold"><strong>業界サーチ</strong></span>
-    </p>
-    <ul class="list-unstyled ps-0">
-      <li class="mb-1">
-        <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0" data-bs-toggle="collapse" data-bs-target="#trade-collapse" aria-expanded="false">
-          商社
-        </button>
-        <div class="collapse" id="trade-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-            <li><a href="{% url 'corporation' %}?query=三菱商事 三井物産 伊藤忠商事　住友商事" class="link-body-emphasis d-inline-flex text-decoration-none rounded">総合</a></li>
-            <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">専門</a></li>
-          </ul>
-        </div>
-      </li>
-      <li class="mb-1">
-        <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0" data-bs-toggle="collapse" data-bs-target="#consult-collapse" aria-expanded="false">
-          コンサル
-        </button>
-        <div class="collapse" id="consult-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-            <li><a href="{% url 'corporation' %}?query=McKinsey BCG Bain ATK Strategy& Roland ADL ZSA EYParthenon IGPI (戦略)" class="link-body-emphasis d-inline-flex text-decoration-none rounded">戦略</a></li>
-            <li><a href="{% url 'corporation' %}?query=コンサル"" class="link-body-emphasis d-inline-flex text-decoration-none rounded">総合</a></li>
-            <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">その他</a></li>
-          </ul>
-        </div>
-      </li>
-      <li class="mb-1">
-        <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0" data-bs-toggle="collapse" data-bs-target="#finance-collapse" aria-expanded="false">
-          金融
-        </button>
-        <div class="collapse" id="finance-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-              <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">外銀</a></li>
-              <li><a href="{% url 'corporation' %}?query=三菱UFJ銀行 三井住友銀行 みずほFG"" class="link-body-emphasis d-inline-flex text-decoration-none rounded">メガバンク</a></li>
-              <li><a href="{% url 'corporation' %}?query=証券 證券"" class="link-body-emphasis d-inline-flex text-decoration-none rounded">証券</a></li>
-              <li><a href="{% url 'corporation' %}?query=保険" class="link-body-emphasis d-inline-flex text-decoration-none rounded">保険</a></li>
-              <li><a href="{% url 'corporation' %}?query=カード リース"" class="link-body-emphasis d-inline-flex text-decoration-none rounded">カード・リース</a></li>
-              <li><a href="{% url 'corporation' %}?query=アセット 投信 信託"" class="link-body-emphasis d-inline-flex text-decoration-none rounded">アセマネ・信託</a></li>
-              <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">その他</a></li>
-          </ul>
-        </div>
-      </li>
-      <li class="mb-1">
-        <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0" data-bs-toggle="collapse" data-bs-target="#it-collapse" aria-expanded="false">
-         IT
-        </button>
-        <div class="collapse" id="it-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-              <li><a href="{% url 'corporation' %}?query=総合研究所 総研 リサーチ" class="link-body-emphasis d-inline-flex text-decoration-none rounded">シンクタンク</a></li>
-              <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">SIer</a></li>
-              <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">外資系</a></li>
-              <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">その他</a></li>
-          </ul>
-        </div>
-      </li>
-        <li class="mb-1">
-        <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0" data-bs-toggle="collapse" data-bs-target="#maker-collapse" aria-expanded="false">
-         メーカー
-        </button>
-        <div class="collapse" id="maker-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-              <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">食品</a></li>
-              <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">電機</a></li>
-              <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">自動車</a></li>
-              <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">鉄鋼</a></li>
-              <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">化学</a></li>
-              <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">その他</a></li>
-          </ul>
-        </div>
-      </li>
-        </li>
-        <li class="mb-1">
-        <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0" data-bs-toggle="collapse" data-bs-target="#hekichi-collapse" aria-expanded="undefined">
-         いずへきち
-        </button>
-        <div class="collapse" id="hekichi-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-              <li><a href="{% url 'corporation' %}?query=(AE/TE)" class="link-body-emphasis d-inline-flex text-decoration-none rounded">横浜</a></li>
-              <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">神戸</a></li>
-              <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">京都</a></li>
-          </ul>
-        </div>
-      </li>
-        <li class="mb-1">
-        <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0" data-bs-toggle="collapse" data-bs-target="#hekichi-collapse" aria-expanded="undefined">
-         インフラ
-        </button>
-        <div class="collapse" id="hekichi-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-              <li><a href="{% url 'corporation' %}?query=電力" class="link-body-emphasis d-inline-flex text-decoration-none rounded">電力</a></li>
-               <li><a href="{% url 'corporation' %}?query=ガス" class="link-body-emphasis d-inline-flex text-decoration-none rounded">ガス</a></li>
-              <li><a href="{% url 'corporation' %}?query=JR" class="link-body-emphasis d-inline-flex text-decoration-none rounded">鉄道</a></li>
-          </ul>
-        </div>
-      </li>
-    </ul>
-  </div>
-</div>
-<!--ここまでサイドバー-->
 <!--ここからメイン-->
 <div class="main-content">
     <h1>Corporation Search</h1>
@@ -171,7 +14,8 @@
         <button class="search-button btn btn-primary" type="submit">Search</button>
     </form>
 <div style="text-align: right; margin-right: 20px">
-<a href="high_school">高校さんへ</a>
+    <a href="high_school">高校さんへ</a>
+    <a href="university">大学さんへ</a>
 </div>
     <div class="search-results">
         {% if corporations %}
@@ -198,21 +42,18 @@
 <!-- アカウントメニュー -->
 <div class="account-menu border-top">
   <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0" data-bs-toggle="collapse" data-bs-target="#account-collapse" aria-expanded="false">
-          アカウント
+          幹部様はこちら
         </button>
         <div class="collapse" id="account-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">新プロジェクト...</a></li>
+    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">新プロジェクト</a></li>
     <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">プロフィール</a></li>
     <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">設定</a></li>
-    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">サインアウト</a></li>
+    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">ログイン</a></li>
   </ul>
 </div>
-    <div>© 2023 就職偏差値 格付けの会</div>
+    <div style="margin-top: 10px">© 2023 就職偏差値 格付けの会</div>
 </div>
 
 </body>
-</main>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </html>
