--- a/highschool/templates/high_school_search.html
+++ b/highschool/templates/high_school_search.html
@@ -1,58 +1,29 @@
+{% include 'high_school_base.html' %}
+
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
-    <title>HighSchool Search</title>
-    <style>
-        body {
-            text-align: center;
-        }
-        .search-form {
-            margin: 20px;
-        }
-        .search-input {
-            width: 300px;
-            padding: 10px;
-            font-size: 16px;
-        }
-        .search-button {
-            padding: 10px 20px;
-            font-size: 16px;
-        }
-        .search-results {
-            margin-top: 20px;
-            margin-left: 50px;
-        }
-        .no-results {
-            color: red;
-        }
-        table {
-            width: 80%;
-            border-collapse: collapse;
-            margin: 0 auto;
-        }
-        th, td {
-            padding: 8px;
-            border: 1px solid #ddd;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-    </style>
+    <title>高校偏差値検索</title>
 </head>
+
 <body>
+<div class="main-content">
     <h1>HighSchool Search</h1>
     <form class="search-form" method="get">
         <input class="search-input" type="text" name="query" value="{{ query }}" placeholder="高校名or高校偏差値">
-        <button class="search-button" type="submit">Search</button>
+        <button class="search-button btn btn-primary" type="submit">Search</button>
     </form>
-
+<div style="text-align: right; margin-right: 20px">
+    <a href="../">企業さんへ</a>
+    <a href="./university">大学さんへ</a>
+</div>
     <div class="search-results">
         {% if high_schools %}
             <h2>Search Results:</h2>
             <table>
                 <tr>
-                    <th>高校名</th>
-                    <th>高校偏差値(駿台)</th>
+                    <th><font color="#333333">高校名</font></th>
+                    <th><font color="#333333">高校偏差値(駿台)</font></th>
                 </tr>
                 {% for high_school in high_schools %}
                     <tr>
@@ -65,6 +36,23 @@
             <p class="no-results">No results found.</p>
         {% endif %}
     </div>
-    <a href="../">企業さんへ</a>
+</div>
+
+<!-- サイドバー下部 -->
+<!-- アカウントメニュー -->
+<div class="account-menu border-top">
+  <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0" data-bs-toggle="collapse" data-bs-target="#account-collapse" aria-expanded="false">
+          幹部様はこちら
+        </button>
+        <div class="collapse" id="account-collapse">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">新プロジェクト</a></li>
+    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">プロフィール</a></li>
+    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">設定</a></li>
+    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">ログイン</a></li>
+  </ul>
+</div>
+    <div style="margin-top: 10px">© 2023 駿台</div>
+</div>
 </body>
 </html>
