文字大きく

--- a/corporation/templates/corporation_base.html
+++ b/corporation/templates/corporation_base.html
@@ -71,7 +71,7 @@
           商社
         </button>
         <div class="collapse" id="trade-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ">
             <li><a href='{% url 'corporation' %}?query=三菱商事 三井物産 伊藤忠商事　"住友商事" "丸紅" 豊田通商 双日' class="link-body-emphasis d-inline-flex text-decoration-none rounded">総合</a></li>
             <li><a href="{% url 'corporation' %}?query=日鉄物産 伊藤忠丸紅鉄鋼 " class="link-body-emphasis d-inline-flex text-decoration-none rounded">専門</a></li>
           </ul>
@@ -82,7 +82,7 @@
           コンサル
         </button>
         <div class="collapse" id="consult-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ">
             <li><a href="{% url 'corporation' %}?query=McKinsey BCG Bain ATK Strategy& Roland ADL ZSA EYParthenon IGPI (戦略)" class="link-body-emphasis d-inline-flex text-decoration-none rounded">戦略</a></li>
             <li><a href="{% url 'corporation' %}?query=コンサル" class="link-body-emphasis d-inline-flex text-decoration-none rounded">総合</a></li>
             <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">その他</a></li>
@@ -94,7 +94,7 @@
           金融
         </button>
         <div class="collapse" id="finance-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ">
               <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">外銀</a></li>
               <li><a href="{% url 'corporation' %}?query=三菱UFJ銀行 三井住友銀行 みずほFG" class="link-body-emphasis d-inline-flex text-decoration-none rounded">メガバンク</a></li>
               <li><a href="{% url 'corporation' %}?query=証券 證券" class="link-body-emphasis d-inline-flex text-decoration-none rounded">証券</a></li>
@@ -110,7 +110,7 @@
          IT
         </button>
         <div class="collapse" id="it-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ">
               <li><a href="{% url 'corporation' %}?query=総合研究所 総研 リサーチ" class="link-body-emphasis d-inline-flex text-decoration-none rounded">シンクタンク</a></li>
               <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">SIer</a></li>
               <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">外資系</a></li>
@@ -123,7 +123,7 @@
          メーカー
         </button>
         <div class="collapse" id="maker-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ">
               <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">食品</a></li>
               <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">電機</a></li>
               <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">自動車</a></li>
@@ -138,7 +138,7 @@
          いずへきち
         </button>
         <div class="collapse" id="hekichi-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ">
               <li><a href="{% url 'corporation' %}?query=(AE/TE)" class="link-body-emphasis d-inline-flex text-decoration-none rounded">横浜</a></li>
               <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">神戸</a></li>
               <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">京都</a></li>
@@ -150,7 +150,7 @@
          インフラ
         </button>
         <div class="collapse" id="infra-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ">
               <li><a href="{% url 'corporation' %}?query=電力" class="link-body-emphasis d-inline-flex text-decoration-none rounded">電力</a></li>
                <li><a href="{% url 'corporation' %}?query=ガス" class="link-body-emphasis d-inline-flex text-decoration-none rounded">ガス</a></li>
               <li><a href="{% url 'corporation' %}?query=JR" class="link-body-emphasis d-inline-flex text-decoration-none rounded">鉄道</a></li>
@@ -163,7 +163,7 @@
          建設・不動産
         </button>
         <div class="collapse" id="dev-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ">
               <li><a href="{% url 'corporation' %}?query=不動産" class="link-body-emphasis d-inline-flex text-decoration-none rounded">デベロッパー</a></li>
                <li><a href="{% url 'corporation' %}?query=建設" class="link-body-emphasis d-inline-flex text-decoration-none rounded">ゼネコン</a></li>
           </ul>
@@ -174,7 +174,7 @@
             マスコミ関連
         </button>
         <div class="collapse" id="media-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ">
               <li><a href='{% url 'corporation' %}?query="電通" "博報堂" ADK 東急エージェンシー 広告社' class="link-body-emphasis d-inline-flex text-decoration-none rounded">広告</a></li>
                <li><a href="{% url 'corporation' %}?query=テレビ NHK" class="link-body-emphasis d-inline-flex text-decoration-none rounded">テレビ</a></li>
               <li><a href="{% url 'corporation' %}?query=講談社 集英社 白泉社 小学館 新潮社 扶桑社" class="link-body-emphasis d-inline-flex text-decoration-none rounded">出版</a></li>
