--- a/highschool/templates/high_school_base.html
+++ b/highschool/templates/high_school_base.html
@@ -72,7 +72,7 @@
             北海道
         </button>
         <div class="collapse" id="hokkaido-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ">
               <li><a href="{% url 'highschool:high_school' %}?query=札幌北 札幌南" class="link-body-emphasis d-inline-flex text-decoration-none rounded">全体</a></li>
             <li><a href="{% url 'highschool:high_school' %}?query=札幌北 札幌南" class="link-body-emphasis d-inline-flex text-decoration-none rounded">公立</a></li>
             <li><a href="{% url 'highschool:high_school' %}?query= " class="link-body-emphasis d-inline-flex text-decoration-none rounded">私立</a></li>
@@ -84,7 +84,7 @@
           東北
         </button>
         <div class="collapse" id="tohoku-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ">
             <li><a href="{% url 'highschool:high_school' %}?query=八戸 仙台第二 盛岡第一" class="link-body-emphasis d-inline-flex text-decoration-none rounded">全体</a></li>
               <li><a href="{% url 'highschool:high_school' %}?query=八戸 仙台第二 盛岡第一" class="link-body-emphasis d-inline-flex text-decoration-none rounded">公立</a></li>
               <li><a href="{% url 'highschool:high_school' %}?query=" class="link-body-emphasis d-inline-flex text-decoration-none rounded">私立</a></li>
@@ -97,7 +97,7 @@
           関東
         </button>
         <div class="collapse" id="kanto-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ">
               <li><a href='{% url 'highschool:high_school' %}?query=慶應女子（一般） 筑波大駒場 "開成"' class="link-body-emphasis d-inline-flex text-decoration-none rounded">全体</a></li>
               <li><a href='{% url 'highschool:high_school' %}?query=日比谷 "西" 横浜翠嵐' class="link-body-emphasis d-inline-flex text-decoration-none rounded">公立</a></li>
               <li><a href='{% url 'highschool:high_school' %}?query="開成" 渋谷幕張 慶應志木（一般） 早稲田実業' class="link-body-emphasis d-inline-flex text-decoration-none rounded">私立</a></li>
@@ -109,7 +109,7 @@
          甲信越
         </button>
         <div class="collapse" id="koshin-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ">
               <li><a href="{% url 'highschool:high_school' %}?query=新潟 長野（県立） 松本深志" class="link-body-emphasis d-inline-flex text-decoration-none rounded">全体</a></li>
               <li><a href="{% url 'highschool:high_school' %}?query=新潟 長野（県立） 松本深志" class="link-body-emphasis d-inline-flex text-decoration-none rounded">公立</a></li>
               <li><a href="{% url 'highschool:high_school' %}?query=" class="link-body-emphasis d-inline-flex text-decoration-none rounded">私立</a></li>
@@ -121,7 +121,7 @@
          北陸
         </button>
         <div class="collapse" id="hokurik-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ">
               <li><a href="{% url 'highschool:high_school' %}?query=金沢 富山 藤島" class="link-body-emphasis d-inline-flex text-decoration-none rounded">全体</a></li>
               <li><a href="{% url 'highschool:high_school' %}?query=金沢 富山 藤島" class="link-body-emphasis d-inline-flex text-decoration-none rounded">公立</a></li>
               <li><a href="{% url 'highschool:high_school' %}?query=" class="link-body-emphasis d-inline-flex text-decoration-none rounded">私立</a></li>
@@ -134,7 +134,7 @@
          東海
         </button>
         <div class="collapse" id="tokai-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ">
               <li><a href="{% url 'highschool:high_school' %}?query=岡崎 旭丘 岐阜" class="link-body-emphasis d-inline-flex text-decoration-none rounded">全体</a></li>
               <li><a href="{% url 'highschool:high_school' %}?query=岡崎 旭丘 岐阜" class="link-body-emphasis d-inline-flex text-decoration-none rounded">公立</a></li>
               <li><a href="{% url 'highschool:high_school' %}?query=" class="link-body-emphasis d-inline-flex text-decoration-none rounded">私立</a></li>
@@ -146,7 +146,7 @@
          近畿
         </button>
         <div class="collapse" id="kinki-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ">
               <li><a href="{% url 'highschool:high_school' %}?query=" class="link-body-emphasis d-inline-flex text-decoration-none rounded">全体</a></li>
               <li><a href="{% url 'highschool:high_school' %}?query=" class="link-body-emphasis d-inline-flex text-decoration-none rounded">公立</a></li>
               <li><a href="{% url 'highschool:high_school' %}?query=" class="link-body-emphasis d-inline-flex text-decoration-none rounded">私立</a></li>
@@ -158,7 +158,7 @@
          中国
         </button>
         <div class="collapse" id="chugoku-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ">
               <li><a href="{% url 'highschool:high_school' %}?query=" class="link-body-emphasis d-inline-flex text-decoration-none rounded">全体</a></li>
               <li><a href="{% url 'highschool:high_school' %}?query=" class="link-body-emphasis d-inline-flex text-decoration-none rounded">公立</a></li>
               <li><a href="{% url 'highschool:high_school' %}?query=" class="link-body-emphasis d-inline-flex text-decoration-none rounded">私立</a></li>
@@ -170,7 +170,7 @@
          四国
         </button>
         <div class="collapse" id="shikoku-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ">
               <li><a href="{% url 'highschool:high_school' %}?query=" class="link-body-emphasis d-inline-flex text-decoration-none rounded">全体</a></li>
               <li><a href="{% url 'highschool:high_school' %}?query=" class="link-body-emphasis d-inline-flex text-decoration-none rounded">公立</a></li>
               <li><a href="{% url 'highschool:high_school' %}?query=" class="link-body-emphasis d-inline-flex text-decoration-none rounded">私立</a></li>
@@ -182,7 +182,7 @@
          九州
         </button>
         <div class="collapse" id="kyushu-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ">
               <li><a href="{% url 'highschool:high_school' %}?query=" class="link-body-emphasis d-inline-flex text-decoration-none rounded">全体</a></li>
               <li><a href="{% url 'highschool:high_school' %}?query=" class="link-body-emphasis d-inline-flex text-decoration-none rounded">公立</a></li>
               <li><a href="{% url 'highschool:high_school' %}?query=" class="link-body-emphasis d-inline-flex text-decoration-none rounded">私立</a></li>
