海外トップ大勝ち！！

--- a/university/templates/university_base.html
+++ b/university/templates/university_base.html
@@ -61,6 +61,9 @@
 <!-- 折り畳み可能リストのサイドバー -->
 <div class="sidebar">
   <div class="flex-shrink-0 p-3" style="width: 280px; margin-bottom: 100px">
+      <p class="d-flex pb-3 mb-3 border-bottom">
+        <span class="fs-5 fw-semibold"><strong>なんでもランキング.com</strong></span>
+    </p>
     <p class="d-flex pb-3 mb-3 border-bottom">
       <svg class="bi me-2" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
         <span class="fs-5 fw-semibold"><strong>一覧</strong></span>
